--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">That Time I Got Reincarnated as a Candy Corn and Now I'm Trapped at OWNER_NAME_PLACEHOLDER's Halloween Movie Marathon</h1>
+        <h1 class="title">Uhhhh That Time I Got Reincarnated as a Candy Corn and Now I'm Trapped at OWNER_NAME_PLACEHOLDER's Halloween Movie Marathon</h1>
         
         <div class="main-content">
             <div class="left-panel">
